--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>info.xiaohei.spark</groupId>
-    <artifactId>database-connector</artifactId>
+    <artifactId>spark-database-connector</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
