--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>info.xiaohei.spark</groupId>
-    <artifactId>spark-database-connector</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>spark-database-connector_2.10</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
