--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
     <developers>
         <developer>
             <name>xiaohei</name>
-            <email>xiaohei.info@gmail.com</email>
+            <email>yuande.jiang@fugetech.com</email>
             <url>https://www.xiaohei.info</url>
         </developer>
     </developers>
