--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <scala.binary.version>2.10</scala.binary.version>
         <!--<scala.version>2.11.8</scala.version>-->
         <!--<scala.binary.version>2.11</scala.binary.version>-->
-        <spark.version>1.6.0</spark.version>
+        <spark.version>2.2.0</spark.version>
         <!--<hbase.version>0.98.4-hadoop2</hbase.version>-->
         <hbase.version>1.2.0</hbase.version>
         <mysql.version>5.1.35</mysql.version>
@@ -62,12 +62,12 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-test-tags_${scala.binary.version}</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.spark</groupId>-->
+            <!--<artifactId>spark-test-tags_${scala.binary.version}</artifactId>-->
+            <!--<version>${spark.version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
         <!--hbase-->
         <dependency>
             <groupId>org.apache.hbase</groupId>
